--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,22 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-color-primary: #5d5e12;
+  --ifm-color-primary-dark: #545510;
+  --ifm-color-primary-darker: #4f500f;
+  --ifm-color-primary-darkest: #41420d;
+  --ifm-color-primary-light: #666714;
+  --ifm-color-primary-lighter: #6b6c15;
+  --ifm-color-primary-lightest: #797a17;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #bec125;
+  --ifm-color-primary-dark: #abae21;
+  --ifm-color-primary-darker: #a2a41f;
+  --ifm-color-primary-darkest: #85871a;
+  --ifm-color-primary-light: #d1d429;
+  --ifm-color-primary-lighter: #d4d831;
+  --ifm-color-primary-lightest: #dadd4e;
 }
